--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,6 +24,7 @@
                         </li>
                     <li><a href="/add-user">Ajouter un utilisateur</a></li>
                     <% } %>
+                    <li><a href="/faq">FAQ</a></li>
                     <li><a href="/auth/logout">Déconnexion</a></li>
                 </ul>
             </nav>
@@ -82,6 +83,7 @@
                                 </li>
                                 <li><a href="/add-user">Ajouter un utilisateur</a></li>
                                 <% } %>
+                                <li><a href="/faq">FAQ</a></li>
                                 <li><a href="/auth/logout">Déconnexion</a></li>
                             </ul>
                         </nav>
