--- a/public/css/skin-design-agency.css
+++ b/public/css/skin-design-agency.css
@@ -2012,7 +2012,7 @@ h4.project-title{
 .post-author-aside span,
 .post-author-aside a,
 .post-comments-aside span,
-.post-comments-aside a{
+	post-comments-aside a{
 	font-size: 1.2rem;
 	text-transform: none;
 	color: #999;
@@ -3923,27 +3923,37 @@ only screen and (				min-resolution: 2dppx) {
 	animation-delay: 0.4s;
 }
 
-.chatbot-suggestion-button{
-	border-radius: 5px;
-}
-
-.notification-bubble {
+.chatbot-suggestion-button {
 	background-color: #0D47A1;
 	color: white;
-	border-radius: 50%;
-	padding: 2px 6px;
-	font-size: 10px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 20px;
-    height: 20px;
-	margin-left: 5px;
-}
-.notification-bubble-mobile {
-	display: none;
+	border: none;
+	padding: 10px;
+	margin: 5px 0;
+	border-radius: 5px;
+	cursor: pointer;
+	width: 100%;
+	text-align: left;
 }
 
+.chatbot-suggestion-button:hover {
+	background-color: #1565C0;
+}
+
+.chatbot-faq-button {
+	background-color: #E5E5EA;
+	color: black;
+	border: none;
+	padding: 10px;
+	margin: 5px 0;
+	border-radius: 5px;
+	cursor: pointer;
+	width: 100%;
+	text-align: left;
+}
+
+.chatbot-faq-button:hover {
+	background-color: #D5D5DA;
+}
 
 @keyframes typing {
 	0%, 60%, 100% {
@@ -3964,7 +3974,9 @@ only screen and (				min-resolution: 2dppx) {
 		padding-bottom:20px !important;
 
 	}
-
+	input[type="text"], input[type="date"], input[type="email"],input[type="tel"],input[type="password"],input[type="number"], select {
+		max-width: unset;
+	}
 	.youtubeVideoMobile{
 		display: block;
 	}
@@ -3990,7 +4002,9 @@ only screen and (				min-resolution: 2dppx) {
 	}
 	}
 
-input[type="text"], input[type="date"], input[type="email"],input[type="tel"],input[type="password"],select {
+
+
+input[type="text"], input[type="date"], input[type="email"],input[type="tel"],input[type="password"],input[type="number"], select {
     width: 100%;
     max-width: 50%;
     padding: 10px;
@@ -4016,3 +4030,14 @@ select {
     padding-right: 30px;
 }
 
+.checkboxForm{
+	height: fit-content; 
+	width: fit-content!important; 
+	margin-left: 10px;
+	margin-top: auto;
+	margin-bottom: auto;
+}
+
+.chatbot-input{
+	max-width: unset!important;
+}
