--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,9 +22,9 @@
                                     <p class="tms-caption color-white text-xlarge weight-light" data-no-scale>Bienvenue sur le CRM de Moana Energy</p><br/>
                                     <p class="tms-caption color-white text-xlarge weight-light" data-no-scale>Gérez vos clients et projets efficacement</p>
                                 </div>
-                                <div class="column width-12" data-no-scale data-animate-in="preset:flipInY;duration:500ms;delay:650ms;">
-                                    <a href="/ajouter-client" class="cta-button" style="margin-right:5px;">Ajouter un client</a>
-                                    <a href="/clients" class="cta-button" style="margin-left:5px;">Voir mes clients</a>
+                                <div class="column width-12" data-no-scale data-animate-in="preset:flipInY;duration:500ms;delay:650ms;" style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
+                                    <a href="/ajouter-client" class="cta-button" style="margin-bottom:5px;width:250px;">Ajouter un client</a>
+                                    <a href="/clients" class="cta-button" style="width:250px;">Voir mes clients</a>
                                 </div> 
                             </div>
                         </div>
