--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -35,6 +35,7 @@
                         <li>
                             <a href="/clients">Voir les clients</a>
                         </li>
+                        <li><a href="/faq">FAQ</a></li>
                     </ul>
                 </div>
             </div>
