--- a/views/add-clients.ejs
+++ b/views/add-clients.ejs
@@ -76,7 +76,7 @@
                                 <label for="type_renovation">Type de rénovation souhaitée</label>
                                 <div id="type_renovation">
                                     <div style="display: flex;align-items: center;"><label>Calorifugeage</label><input type="checkbox" name="type_renovation[]" value="calorifugeage" class="checkboxForm" ></div>
-                                    <div style="display: flex;white-space:nowrap;align-items: center;"><label>Point singulier</label><input type="checkbox" name="type_renovation[]" value="point_singulier" class="checkboxForm"></div>
+                                    <div style="display: flex;white-space:nowrap;align-items: center;"><label>Point singulier</label><input type="checkbox" name="type_renovation[]" value="point singulier" class="checkboxForm"></div>
                                 </div>
                             </div>
                             <div class="unique-form-group">
